use copyOf instead of modifiableXXX